policygenerator/kustomize/policy3_kyverno/kyverno.yaml
# WARNING: ClusterPolicy was DEPRECATED in Kyverno v1.17
# To update your policy, browse the official Kyverno policy collection 
# for current examples: https://kyverno.io/policies

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: audit
  rules:
    - name: check-for-labels
      match:
        resources:
          kinds:
            - Namespace
      validate:
        message: "The label `purpose` is required."
        pattern:
          metadata:
            labels:
              purpose: "?*"
